Fixed spacing issues on Shop by category section - homepage

--- a/assets/homepage.css
+++ b/assets/homepage.css
@@ -464,8 +464,8 @@
     .top-navigation-box header h3.heading {font-size: 16px;}
     .shop_by_category_section .inner-collections-row {height: 23rem;justify-content: space-between;flex-direction: column;padding-top: 16px;align-items: center;}
     .shop_by_category_section.top-collections .collection {margin: 0 8px;}
-    .shop_by_category_section.top-collections {padding: 0;padding-left: 0px;}
-    /* .shop_by_category_section.top-collections .owl-stage-outer{padding-left: var(--container-gutter);padding-top: var(--container-gutter);} */
+    .shop_by_category_section.top-collections {padding: 0;padding-left: 0px;padding-top: var(--container-gutter);}
+    .shop_by_category_section.top-collections .owl-stage-outer{padding-left: 10px;padding-top: 10px;}
     .shopify-section h3.heading {
       text-align: center !important;
       width: 100%;
